Changed transform on card to avoid overlap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -91,7 +91,7 @@ body {
 }
 
 .card:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 .card-img-top {
